src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dncau__Fax_DNC_Checked__c</fullName>
        <label>Fax Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dncau__Fax_DNC_Status__c</fullName>
        <label>Fax DNC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Can call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retryable Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>dncau__Lead_DNC__c</fullName>
        <description>Returns true if any of the standard lead phone fields are flagged as &apos;Do not call&apos;</description>
        <formula>IF(
OR (
  ISPICKVAL(dncau__Fax_DNC_Status__c, &apos;Do not call&apos;),
  ISPICKVAL(dncau__MobilePhone_DNC_Status__c, &apos;Do not call&apos;),
  ISPICKVAL(dncau__Phone_DNC_Status__c, &apos;Do not call&apos;)
), 
&apos;Do not call&apos;, 
 IF(
  OR (
   ISPICKVAL(dncau__Fax_DNC_Status__c, &apos;Retryable Error&apos;),
   ISPICKVAL(dncau__MobilePhone_DNC_Status__c, &apos;Retryable Error&apos;),
   ISPICKVAL(dncau__Phone_DNC_Status__c, &apos;Retryable Error&apos;)
  )
 ,&apos;Retryable Error&apos;,

  IF(
   OR (
   ISPICKVAL(dncau__Fax_DNC_Status__c, &apos;Can call&apos;),
   ISPICKVAL(dncau__MobilePhone_DNC_Status__c, &apos;Can call&apos;),
   ISPICKVAL(dncau__Phone_DNC_Status__c, &apos;Can call&apos;)
   )
  ,&apos;Can call&apos;, &apos;&apos;)


 )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead DNC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dncau__MobilePhone_DNC_Checked__c</fullName>
        <label>Mobile Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dncau__MobilePhone_DNC_Status__c</fullName>
        <label>Mobile DNC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Can call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retryable Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>dncau__Phone_DNC_Checked__c</fullName>
        <label>Phone DNC Last Checked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dncau__Phone_DNC_Status__c</fullName>
        <label>Phone DNC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Can call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retryable Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
</CustomObject>